# utility

./: .clang-format  .gitignore  BUILD.gn  LICENSE  README.md  README_zh.md  SRCDEP.yaml  build_options.gni  build_thirdparty.py  scope_exit.h  srcdep.py
.github/workflows/: autobuild.yml  linux.yml  macos.yml  server.yml  windows.yml  winxp.yml
build_config/: BUILD.gn  go_build.py
include/xl/: byte_order.h  cmdline_options  cmdline_options.h  crypto  encoding  encoding.h  file  http  http_client  ini  json  log  log_init  log_init.h  log_setup  native_string  native_string.h  process  reflect  scope_exit  string  synchronous  task_thread  thread  url  xml  zip
src/: BUILD.gn  cmdline_options.cc  cmdline_options.h  cmdline_options_echo.cc  cmdline_options_echo_win.cc  cmdline_options_test.cc  crypto.cc  crypto.h  crypto_test.cc  encoding.h  encoding_posix.cc  encoding_test.cc  encoding_win.cc  file.cc  file.h  file_test.cc  http.cc  http_client.cc  http_client_curl.cc  http_client_winhttp.cc  http_posix.cc  http_win.cc  ini.cc  log.cc  log.h  log_init.h  native_string.h  process.h  process_posix.cc  process_test.cc  process_util.h  process_util_test.cc  process_util_win.cc  process_win.cc  scope_exit.h  scope_exit_test.cc  string.h  string_test.cc  string_util.h  synchronous_posix.cc  (+13 more)
src/client_sdk/: BUILD.gn  client_sdk.cc  client_sdk_test.cc  test_server.py
src/config/: BUILD.gn  ini.cc  ini.h  ini_test.cc  json_test.cc  xml_test.cc
src/crypto/: BUILD.gn  crypto.cc  crypto_test.cc
src/example/: BUILD.gn  new_client.cc  old_client.cc  run_server.py  server.py
src/file/: BUILD.gn  zip.cc  zip_test.cc
src/log/: BUILD.gn  log.cc  log_test.cc
src/meta/: BUILD.gn  reflect_test.cc
src/net/: BUILD.gn  http.cc  http_posix.cc  http_test.cc  http_win.cc  url_posix.cc  url_test.cc  url_win.cc
src/process/: BUILD.gn  cmdline_options.cc  cmdline_options_echo.cc  cmdline_options_echo_win.cc  cmdline_options_test.cc  process_util_test.cc  process_util_win.cc  process_win.cc
src/string/: BUILD.gn  encoding_posix.cc  encoding_test.cc  encoding_win.cc
src/thread/: BUILD.gn  synchronous.cc  task_thread.cc  task_thread_test.cc  thread_posix.cc  thread_win.cc
src/utility/: BUILD.gn  cmdline_options.cc  cmdline_options.h  cmdline_options_echo.cc  cmdline_options_echo_win.cc  cmdline_options_test.cc  crypto.cc  crypto.h  crypto_test.cc  encoding.h  encoding_win.cc  http_client.cc  http_client.h  http_client_curl.cc  http_client_posix.cc  http_client_test.cc  http_client_win.cc  http_client_winhttp.cc  http_cmd.cc  log.cc  log.h  log_init.h  native_string.h  process_util.h  process_util_posix.cc  process_util_test.cc  process_util_win.cc  string_util.h  system_util.h  system_util_posix.cc  system_util_win.cc  test.cc  unittest.cc  url.cc  url.h  url_test.cc
test/: BUILD.gn  cmdline_options_echo.cc  cmdline_options_echo_win.cc  cmdline_options_test.cc  crypto_test.cc  encoding_test.cc  file_test.cc  http_client_test.cc  http_test.cc  ini_test.cc  json_test.cc  log_test.cc  old_client.cc  process_test.cc  reflect_test.cc  scope_exit_test.cc  server.py  string_test.cc  unittest.cc  url_test.cc  xml_test.cc  zip_test.cc
test/tools/: http_echo.py
tools/: BUILD.gn  process_test.cc
unittest/: scope_exit.cpp
