config("project_common") {
  if (is_win) {
    cflags_c = [ "/std:c17" ]
    cflags_cc = [ "/std:c++17" ]
  } else {
    cflags_c = [ "-std=c17" ]
    cflags_cc = [ "-std=c++17" ]
  }
  defines = [
    "BOOST_AUTO_LINK_SYSTEM",
    "BOOST_TEST_NO_MAIN",
    "BOOST_TEST_ALTERNATIVE_INIT_API",
    "BOOST_BEAST_USE_STD_STRING_VIEW",
  ]
  if (is_win) {
    defines += [
      "_WIN32_WINNT=0x0501",
      "_WIN32_WINDOWS=0x0501",
    ]
  }
  include_dirs = [ "//src" ]
  lib_dirs = []
  if (is_debug) {
    include_dirs += [
      "//thirdparty/boost/build/debug/include",
      "//thirdparty/curl/build/debug/include",
    ]
    lib_dirs += [
      "//thirdparty/boost/build/debug/lib",
      "//thirdparty/curl/build/debug/lib",
    ]
  } else {
    include_dirs += [
      "//thirdparty/boost/build/release/include",
      "//thirdparty/curl/build/release/include",
    ]
    lib_dirs += [
      "//thirdparty/boost/build/release/lib",
      "//thirdparty/curl/build/release/lib",
    ]
  }
}
