config("project_common") {
  if (is_win) {
    cflags_c = [ "/std:c17" ]
    cflags_cc = [ "/std:c++17" ]
  } else {
    cflags_c = [ "-std=c17" ]
    cflags_cc = [ "-std=c++17" ]
  }
  defines = [
    "BOOST_AUTO_LINK_SYSTEM",
    "BOOST_TEST_NO_MAIN",
    "BOOST_TEST_ALTERNATIVE_INIT_API",
    "BOOST_BEAST_USE_STD_STRING_VIEW",
  ]
  if (is_win) {
    defines += [
      "_WIN32_WINNT=0x0501",
      "_WIN32_WINDOWS=0x0501",
    ]
  }
  include_dirs = [
    "//src",
    "//thirdparty/boost/",
    "//thirdparty/loki/include",
    "//thirdparty/googletest/googletest/include",
    "//thirdparty/curl/include",
    "//thirdparty/rapidjson/include",

    # "//thirdparty/openssl/include",
  ]
  lib_dirs = []
  if (is_debug) {
    lib_dirs += [
      # "//thirdparty/boost/build/debug/lib",
      "//thirdparty/googletest/build/Debug",
      "//thirdparty/curl/build/debug/lib",

      # "//thirdparty/openssl/build/debug/lib",
    ]
  } else {
    lib_dirs += [
      # "//thirdparty/boost/build/release/lib",
      "//thirdparty/googletest/build/Release",
      "//thirdparty/curl/build/release/lib",

      # "//thirdparty/openssl/build/release/lib",
    ]
  }
}
