config("project_common") {
  if (is_win) {
    cflags_c = [ "/std:c17" ]
    cflags_cc = [ "/std:c++17" ]
  } else {
    cflags_c = [ "-std=c17" ]
    cflags_cc = [ "-std=c++17" ]
  }
  defines = [
    "BOOST_AUTO_LINK_SYSTEM",
    "BOOST_TEST_NO_MAIN",
    "BOOST_TEST_ALTERNATIVE_INIT_API",
    "BOOST_BEAST_USE_STD_STRING_VIEW",
  ]
  if (is_win) {
    defines += [
      "_WIN32_WINNT=0x0501",
      "_WIN32_WINDOWS=0x0501",
    ]
  }
  include_dirs = [
    "//src",
    "//thirdparty/boost/",
    "//thirdparty/loki/include",
    "//thirdparty/googletest/googletest/include",
    "//thirdparty/curl/include",
    "//thirdparty/rapidjson/include",
    "//thirdparty/openssl/include",
  ]
  lib_dirs = []
  if (is_debug) {
    lib_dirs += [
      # "//thirdparty/boost/build/debug/lib",
      "//thirdparty/curl/build/debug/lib",
    ]
  } else {
    lib_dirs += [
      # "//thirdparty/boost/build/release/lib",
      "//thirdparty/curl/build/release/lib",
    ]
  }
  if (is_linux) {
    if (is_debug) {
      lib_dirs += [ "//thirdparty/googletest/build/debug/lib64" ]
    } else {
      lib_dirs += [ "//thirdparty/googletest/build/release/lib64" ]
    }
  } else {
    if (is_debug) {
      lib_dirs += [ "//thirdparty/googletest/build/debug/lib" ]
    } else {
      lib_dirs += [ "//thirdparty/googletest/build/release/lib" ]
    }
  }
}
