config("utility_public_config") {
  include_dirs = [ "../include" ]
}

group("src") {
  public_deps = [
    "config",
    "crypto",
    "file",
    "log",
    "meta",
    "net",
    "process",
    "string",
    "thread",
  ]
  public_configs = [ ":utility_public_config" ]
}

executable("unittest") {
  testonly = true
  if (is_win) {
    configs += [ "../build/config/win:console_subsystem" ]
  }
  sources = [ "unittest.cc" ]
  deps = [
    "../thirdparty:googletest",
    "config:test",
    "crypto:test",
    "file:test",
    "log:test",
    "meta:test",
    "net:test",
    "process:test",
    "string:test",
    "thread:thread",
  ]
}
