executable("old_client") {
  testonly = true

  include_dirs = [ "../include" ]
  configs += [ "../../build_config:project_common" ]
  if (is_win) {
    configs += [ "../../build/config/win:static_runtime" ]
  }

  sources = [ "old_client.cc" ]

  deps = [
    "../../thirdparty/ZLibWrap/src:zlibwrap",
    "../client:installer",
    "../client:selfupdate",
  ]
}

executable("new_client") {
  testonly = true

  configs += [ "../../build_config:project_common" ]
  if (is_win) {
    configs += [ "../../build/config/win:static_runtime" ]
  }

  sources = [ "new_client.cc" ]
}
