source_set("file") {
  sources = [
    "byte_order.h",
    "file.cc",
    "zip.cc",
  ]

  inputs = [
    "../../include/xl/file",
    "../../include/xl/zip",
  ]

  cflags = []
  if (is_posix) {
    cflags += [ "-Wno-unused-result" ]
  }

  deps = [ "../../thirdparty:minizip" ]

  public_configs = [ "..:utility_public_config" ]
}

source_set("test") {
  testonly = true

  sources = [
    "file_test.cc",
    "zip_test.cc",
  ]

  public_deps = [
    ":file",
    "../../thirdparty:googletest",
  ]
}
