source_set("string") {
  sources = [
    "native_string.h",
    "string_util.h",
  ]

  if (is_win) {
    sources += [
      "encoding.h",
      "encoding_win.cc",
    ]
  }

  cflags = []
  if (is_posix) {
    cflags += [ "-Wno-unused-result" ]
  }

  deps = [ "../../thirdparty:loki" ]
}
